--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 	<title>Wordish</title>
+  <style>
+    body {
+      margin: 0px;
+    }
+  </style>
 </head>
 
 <body>
